# little-bo-peep-leptos

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  app.nix  devshell.toml  flake.nix  fly.toml  input.css  johns_stupid_file_renaming_script.py  leptosfmt.toml  parser  rename_files.py  rust-toolchain.toml  spotlight  tailwind.config.js  test.html
.github/workflows/: fly.yml
.sass-cache/3931ab6c2eeb78b3eee1f7af54277f501b79221b/: main.scssc
content/: ch1.rs  ch_1.emu  ch_2.emu  ch_3.emu
content_watcher/: Cargo.toml
content_watcher/src/: main.rs
elm_to_view/: Cargo.toml  README.md
parser/: Cargo.toml
parser/src/: lib.rs
public/: analytics.js  ch2.emu  dev-analytics.js  extras.js  html_ch1_ch.html  html_ch1_ex.html  html_ch2_ch(1).html  html_ch2_ch.html  html_ch2_ex.html  html_ch3_ch.html  mathjax.js  mathjax_setup.js
public/chapters/: chapter2.emu
render-chapters/: Cargo.toml
render-chapters/src/: lib.rs
spotlighter/: README.md  build.sh  gleam.toml  manifest.toml  spotlight  spotlighter
spotlighter/src/: spotlighter.gleam
src/: app.rs  article.rs  error_template.rs  global_state.rs  header.rs  lib.rs  main.rs  page.rs  res
src/article/: ch_1.rs
src/componants/: Article.rs  ArticleTitle.rs  Columns.rs  Grid.rs  Header.rs  Image.rs  ImageLeft.rs  ImageRight.rs  Link.rs  List.rs  Math.rs  MathBlock.rs  Paragraph.rs  Solution.rs  Span.rs  Table.rs  Tabs.rs  mod.rs
src/components/: Article.rs  ArticleTitle.rs  Checkbox.rs  Columns.rs  Delimiters.rs  Exercises.rs  Footer.rs  Grid.rs  Header.rs  Home.rs  (+23 more)
style/: output.css
(+97 files in other folders)
